[package]
name = "project_backside"
version = "0.1.0"
authors = ["eliseolivares <elisejpo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono", "uuid"] }
dotenv = "0.11"
env_logger = "0.6"
listenfd = "0.3"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
